@@ -7,6 +7,7 @@
 	<data type="array">
 		<languageKey index="default" type="array">
 			<label index="title">Recycler</label>
+			<label index="description">The recycler allows you to select any deleted data and undelete it. You can undelete recursive if the parent of element is deleted too.</label>
 			<label index="label_alltables">All tables</label>
 			<label index="js.label_lostandfound">Lost and found</label>
 			<label index="js.label_deletedTab">Deleted data</label>
@@ -31,12 +32,15 @@
 			<label index="js.label_title_delete">Delete?</label>
 			<label index="js.label_text_delete">Delete records from tables: </label>
 			<label index="js.label_boxLabel_undelete_recursive">Undelete recursively</label>
+			<label index="js.label_tableMenu_label">Table:</label>
 			<label index="js.label_tableMenu_emptyText">Choose a table...</label>
 			<label index="js.label_filter_emptyText">Keyword</label>
 			<label index="js.label_search">Search:</label>
 			<label index="js.label_pagingMessage">Displaying records {0} - {1} of {2}</label>
 			<label index="js.label_pagingEmpty">No records to display</label>
 			<label index="js.label_noValueFound">No records for {0}</label>
+			<label index="js.label_records">Records</label>
+			<label index="js.label_table">Table</label>
 		</languageKey>
 	</data>
 </T3locallang>
