@@ -14,7 +14,6 @@
 	<!-- Content of module, for instance listing, info or editing -->
 	<div id="typo3-docbody">
 		<div id="typo3-inner-docbody">
-			<h1>###TITLE###</h1>
 			###CONTENT###
 		</div>
 	</div>
